--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,9 @@
 </head>
 <body>
   <app-root></app-root>
-  <noscript>Please enable JavaScript to continue using this application.</noscript>
+  
+
+
 </body>
 </html>
+<!-- AIzaSyD-mGbQhBBSOApzioVIMHqDHkBUOKNBoUM -->
